--- a/n/ni/nig/nigeriapropertycentre.com.html
+++ b/n/ni/nig/nigeriapropertycentre.com.html
@@ -1,29 +1,25 @@
-<!--The following is the downloaded HTML source of the nigeriapropertycentre.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808091838id_/http%3A//www.nigeriapropertycentre.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nigeriapropertycentre.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301140654id_/http%3A//www.nigeriapropertycentre.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 <meta name="blogcatalog" content="9BC10387590">
-<script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=3609848800/cloudflare.min.js"></script><script type="text/javascript">
+<script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-window.__CF=window.__CF||{};window.__CF.AJS={"abetterbrowser":{"config":"none"}};
-//]]>
-</script>
-<script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",mirage:{responsive:0,lazy:1},mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/abv=2706741234/"},atok:"b3979fad9902a3c76aced8ad597d119a",zone:"nigeriapropertycentre.com",rocket:"0",apps:{"abetterbrowser":{"config":"none"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=3609848800/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok8v=02fcfa4f56/"},atok:"c9fb186d0abb3e3a6c21b921160c4207",petok:"6de09fc451c38c579b9f3c6f77406b25137ce543-1393682814-1800",zone:"nigeriapropertycentre.com",rocket:"0",apps:{"abetterbrowser":{"config":"none"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
 //]]>
 </script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-22697833-1']);
-  _gaq.push(['_setDomainName', 'www.nigeriapropertycentre.com']);
+  _gaq.push(['_setDomainName', 'nigeriapropertycentre.com']);
   _gaq.push(['_trackPageview']);
   _gaq.push(['_trackPageLoadTime']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    //ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -54,19 +50,20 @@ jQuery.noConflict();
 <meta name="keywords" content="">
 <meta name="description" content="The No.1 Nigerian real estate and property website with property in Nigeria for sale rent and lease. We offer Nigerian property seekers an easy way to find details of property in Nigeria including homes, houses, lands, shops, office spaces and other commercial properties to buy or rent. Thousands of property listings available.">
 <title>Privacy Policy | Nigeria Property Centre - Nigeria Property Centre</title>
-<link rel="stylesheet" type="text/css" href="/plugins/system/JCH_Optimize/gz/d52ab9cfd7df9b55d8e531b0af1c3e3d.css">
+<link rel="stylesheet" type="text/css" href="/plugins/system/JCH_Optimize/gz/dfee351814a74d56ff1ab6492a851732.css">
 <link href="/templates/yougrids/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <script data-cfasync="false" type="text/javascript">
 	googletag.cmd.push(function() {
 	googletag.defineSlot('/65745623/336x280', [336, 280], 'div-gpt-ad-1368954266302-0').addService(googletag.pubads());
 	googletag.defineSlot('/65745623/NPC_160x600', [160, 600], 'div-gpt-ad-1368954266302-1').addService(googletag.pubads());
+	googletag.defineSlot('/65745623/BottomLeft', [[120, 600], [160, 600], [200, 600]], 'div-gpt-ad-1393677802329-0').addService(googletag.pubads());
 	googletag.pubads().enableSingleRequest();
 	googletag.enableServices();
 	});
 </script>
 <script type="text/javascript" src="/js/jquery.copypaste.js"></script>
 <script type="text/javascript"> var YJSG_topmenu_font = '12px'; </script>
-<script type="text/javascript" src="/plugins/system/JCH_Optimize/gz/c90e3af1b2850f6fcae44c973eddac71.js" defer="defer"></script>
+<script type="text/javascript" src="/plugins/system/JCH_Optimize/gz/9a7918e5a50b420bbe28c83f6b273be1.js" defer="defer"></script>
 <script language="javascript" type="text/javascript">	
 			window.addEvent('domready', function(){
 				new SmoothDrop({
@@ -93,7 +90,7 @@ List your property for free! <a onclick="_gaq.push(['_trackEvent', 'Banner Ads',
  
 <div id="header" style="height:70px;">
 <div id="logo" class="png" style="height:70px;width:17.9%;background:none !important;">
-<a href="http://www.nigeriapropertycentre.com/" style="height:70px;" title="Property in Nigeria"><img height="70px" style="display:none;visibility:hidden;" data-cfsrc="http://templates.nigeriapropertycentre.com/yougrids/images/metal/logo.png" alt="Property in Nigeria"><noscript><img height="70px" src="http://templates.nigeriapropertycentre.com/yougrids/images/metal/logo.png" alt="Property in Nigeria"/></noscript></a>
+<a href="http://www.nigeriapropertycentre.com/" style="height:70px;" title="Property in Nigeria"><img height="70px" src="http://templates.nigeriapropertycentre.com/yougrids/images/metal/logo.png" alt="Property in Nigeria"></a>
 </div>
  
 <div id="yjsgheadergrid" style="width:82.1%;">
@@ -196,7 +193,7 @@ Privacy Policy </h1></div>
 	new SmoothScroll({duration: 500});	
 	})
 </script>
-<div class="validators"><a href="/results" title="Real Estate in Nigeria" style="text-decoration: none;">Real Estate in Nigeria&nbsp; | &nbsp;</a><a href="/about-us" title="About Nigeria Property Centre" style="text-decoration: none;">About Us&nbsp; | &nbsp;</a><a href="/contact-us" title="Contact Nigeria Property Centre" style="text-decoration: none;">Contact Us&nbsp; | &nbsp;</a><a href="/faqs" title="Frequently Asked Questions" style="text-decoration: none;">FAQs&nbsp; | &nbsp;</a><a href="/banner-ads" title="Placing Banner Ads on Nigeria Property Centre" style="text-decoration: none;">Place Banner Ads&nbsp; | &nbsp;</a><a rel="noindex, nofollow" href="/terms-of-use" target="_blank" title="Terms of Use" style="text-decoration: none;">Terms of Use&nbsp; | &nbsp;</a><a rel="noindex, nofollow" href="/privacy-policy" target="_blank" title="Privacy Policy" style="text-decoration: none;">Privacy Policy&nbsp; | &nbsp;</a><a rel="publisher" href="https://plus.google.com/112823110448063496572" target="_blank" title="Nigeria Property Centre - Google+" style="text-decoration: none;">Google+&nbsp; | &nbsp;</a><a title="Back to Top" href="#stylef6">Top</a></div><br><div class="yjsgcp">Copyright © <span>Dilmak Solutions Ventures Limited</span> 2013. All rights reserved.</div> <a rel="nofollow" class="yjsglogo png" href="http://yjsimplegrid.com/" target="_blank">
+<div class="validators"><a href="/results" title="Real Estate in Nigeria" style="text-decoration: none;">Real Estate in Nigeria&nbsp; | &nbsp;</a><a href="/about-us" title="About Nigeria Property Centre" style="text-decoration: none;">About Us&nbsp; | &nbsp;</a><a href="/contact-us" title="Contact Nigeria Property Centre" style="text-decoration: none;">Contact Us&nbsp; | &nbsp;</a><a href="/faqs" title="Frequently Asked Questions" style="text-decoration: none;">FAQs&nbsp; | &nbsp;</a><a href="/banner-ads" title="Placing Banner Ads on Nigeria Property Centre" style="text-decoration: none;">Place Banner Ads&nbsp; | &nbsp;</a><a rel="noindex, nofollow" href="/terms-of-use" target="_blank" title="Terms of Use" style="text-decoration: none;">Terms of Use&nbsp; | &nbsp;</a><a rel="noindex, nofollow" href="/privacy-policy" target="_blank" title="Privacy Policy" style="text-decoration: none;">Privacy Policy&nbsp; | &nbsp;</a><a rel="publisher" href="https://plus.google.com/112823110448063496572" target="_blank" title="Nigeria Property Centre - Google+" style="text-decoration: none;">Google+&nbsp; | &nbsp;</a><a title="Back to Top" href="#stylef6">Top</a></div><br><div class="yjsgcp">Copyright © <span>Dilmak Solutions Ventures Limited</span> 2014. All rights reserved.</div> <a rel="nofollow" class="yjsglogo png" href="http://yjsimplegrid.com/" target="_blank">
 <span>YJSimpleGrid Joomla! Templates Framework official website</span>
 </a>
 </div>
@@ -211,5 +208,20 @@ Privacy Policy </h1></div>
 <p class="nonscript" style="text-align:center">Your browser does not support JavaScript! Please enable it for maximum experience. Thank you.</p>
 </noscript>
  
+ 
+<script type="text/javascript" data-cfasync="false">
+/* <![CDATA[ */
+var google_conversion_id = 1012632773;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script data-cfasync="false" type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1012632773/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 </body></html>
