--- a/b/ba/bag/bagskart.com.html
+++ b/b/ba/bag/bagskart.com.html
@@ -1,35 +1,42 @@
-<!--The following is the downloaded HTML source of the bagskart.com privacy policy that was archived on 2013-07-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130723022342id_/http%3A//www.bagskart.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bagskart.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301150516id_/http%3A//www.bagskart.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><!--<![endif]--><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
 
-    <script type="text/javascript">var slide_on=false;</script>
+    <script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><script type="text/javascript">var slide_on=false;</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Privacy Policy</title>
-<meta name="description" content="Bags">
-<meta name="keywords" content="Bags">
+<title>Privacy Policy | Jewelskart</title>
+<meta name="description" content="Read our Pricvacy Policy here. Buy artificial, silver, gold &amp; diamond jewellery by top brands &amp; designers. Free Shipping | Cash on Deleivery.">
+<meta name="keywords" content="Privacy Policy | Jewelskart
+">
 <meta name="robots" content="INDEX,FOLLOW">
-<link rel="icon" href="http://t7.dkrt.in/media/favicon/stores/4/bagskart_icon.png" type="image/x-icon">
-<link rel="shortcut icon" href="http://t7.dkrt.in/media/favicon/stores/4/bagskart_icon.png" type="image/x-icon">
+<link rel="icon" href="http://di5pe4nbyh9wx.cloudfront.net/media/favicon/stores/4/bagskart_icon.png" type="image/x-icon">
+<link rel="shortcut icon" href="http://di5pe4nbyh9wx.cloudfront.net/media/favicon/stores/4/bagskart_icon.png" type="image/x-icon">
+
+
 <!--[if lt IE 7]>
 <script type="text/javascript">
 //<![CDATA[
-    var BLANK_URL = 'http://t1.dkrt.in/js/blank.html';
-    var BLANK_IMG = 'http://t1.dkrt.in/js/spacer.gif';
+    var BLANK_URL = 'http://di5pe4nbyh9wx.cloudfront.net/js/blank.html';
+    var BLANK_IMG = 'http://di5pe4nbyh9wx.cloudfront.net/js/spacer.gif';
 //]]>
 </script>
 <![endif]-->
 <script type="text/javascript">
+  var CHECKOUT_BASE_URL = 'http://www.bagskart.com/';
   var BASE_URL = 'http://www.bagskart.com/';
   var clearenceUrl = 'http://www.lenskart.com/home-try-on-program.html';
+  var logUsrId	=	'';
+  var sessionCookieTTL = '345600';
 </script>
-<link rel="stylesheet" type="text/css" href="http://t3.dkrt.in/skin/css/f8d76df67a528e2ce1ea8db6037bc9e0.css" media="all">
-<script type="text/javascript" src="http://t1.dkrt.in/js/js/57daa9f4e20ec526f3dcb9726b2389a3.js"></script>
+<script type="text/javascript" src="http://di5pe4nbyh9wx.cloudfront.net/js/top_common_v1.js"></script>
+<link rel="stylesheet" type="text/css" href="http://dxq0awx9u4n5p.cloudfront.net/skin/css/3f34301424b77bda3c2bd57be4f6f825.css" media="all">
+<script type="text/javascript" src="http://di5pe4nbyh9wx.cloudfront.net/js/js/91d46631c977e52ddc1ffb53c2520460.js"></script>
 
 <script type="text/javascript">
 //<![CDATA[
@@ -147,9 +154,7 @@ jQuery("a[data-rel=gpop]").fancybox({
 	</script>
 	
     <!-- //jQuery LightBoxes -->
-<script type="text/javascript">//<![CDATA[
-           window.onload = function(){ var Translator = new Translate([]); }
-           //]]></script>
+
 <!-- MENU -->
 
 <!-- ZOOM -->
@@ -199,7 +204,7 @@ jQuery("a[data-rel=gpop]").fancybox({
     }   
 </style>
 <!--[if IE 7]>
-    <link rel="stylesheet" type="text/css" href="http://t3.dkrt.in/skin/frontend/default/blanco_bag/css/ie7.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="http://dxq0awx9u4n5p.cloudfront.net/skin/frontend/default/blanco_bag/css/ie7.css" media="screen"/>
 <![endif]-->
 <script type="text/javascript">
 //used in quicklogin
@@ -299,11 +304,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-JCV6');
 
 var cookiestr = getCookie('__utmz');
+if(cookiestr){
 var datastr = cookiestr.split('|');
 var utmsource = datastr[0].split('=');
 var utmcam = datastr[1].split('=');
 var utmmedium = datastr[2].split('=');
 dataLayer.push({'visitorUtm_Source': utmsource[1],'visitorUtm_Medium': utmmedium[1],'visitorUtm_Cam': utmcam[1]});
+}
 });
 
 </script>
@@ -675,6 +682,6 @@ dataLayer.push({'visitorUtm_Source': utmsource[1],'visitorUtm_Medium': utmmedium
 </table>
 
 <p style="margin-bottom: 0in; line-height: 113%">&nbsp;</p></div>                    </div>
+<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-1.newrelic.com","2af0740889","473788","Y1dWNksCWktSBxcLC1oddQFNCltWHAcOEUtEU1MHFhVdXUQ=",0,140,new Date().getTime(),"","","","",""]);</script>
 
-
-</body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
