--- a/c/cl/cli/clixgames.com.html
+++ b/c/cl/cli/clixgames.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the clixgames.com privacy policy that was archived on 2013-09-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130918185846id_/http%3A//www.clixgames.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clixgames.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301164633id_/http%3A//www.clixgames.com/privacypolicy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" style="" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Privacy Policy | SocialBux</title>
