--- a/k/ki/kin/kindsafe.com.html
+++ b/k/ki/kin/kindsafe.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kindsafe.com privacy policy that was archived on 2013-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131230101139id_/http%3A//www.kindsafe.com/info) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kindsafe.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301183821id_/http%3A//www.kindsafe.com/info) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head> 
 <title>About Kindsafe.com</title> 
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="keywords" content="">	 
 <meta name="robots" content="all,follow">
-<link rel="stylesheet" href="http://dsilddyetio8.cloudfront.net/public/css8.css" media="screen">
+<link rel="stylesheet" href="/public/css9.css" media="screen">
 <link rel="shortcut icon" href="http://www.kindsafe.com/favicon.ico" type="image/x-icon">
 
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://www.google.com/jsapi" type="text/javascript"></script> 
@@ -24,7 +24,7 @@ max-width:1280px;
 min-width:790px;
 position:relative;">
 <a class="logo" href="http://www.kindsafe.com">
-<img src="http://dsilddyetio8.cloudfront.net/public/logo.gif"></a>
+<img src="/public/logo.gif"></a>
 <div class="ds">
 <form action="http://www.kindsafe.com/search/">
 <input type="text" name="s" class="s" onclick="this.value='';" value="">
@@ -32,7 +32,7 @@ position:relative;">
 </form>
 </div>
 <div class="search">
-<a style="position:relative;top:8px;left:-20px;" href="/hlogin/go/" title="Sign in with Facebook"><img src="http://dsilddyetio8.cloudfront.net/public/login.png"></a>
+
 <a href="/login/">Login</a>
 </div>
 </div>
@@ -93,7 +93,7 @@ using DART cookie and used to serve ads for goods and services that you may be m
 </div>
 
 
-<div class="bottom" style="margin-top:20px;">
+<div class="bottom">
 <div class="inbottom" style="margin:auto;
 width:75%;
 max-width:1280px;
@@ -135,7 +135,7 @@ Europe, Czech Republic<br>
 <p>
 We have <strong>1000000</strong> domains in our database.
 We have collected  <strong>7081877</strong> pieces of information about domains.
-We received <strong>71068568</strong>  check-safety requests so far.
+We received <strong>82228464</strong>  check-safety requests so far.
 
 </p>
 </div>
