--- a/i/iv/ivi/ividi.org.html
+++ b/i/iv/ivi/ividi.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ividi.org privacy policy that was archived on 2013-09-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130916185834id_/http%3A//ividi.org/index.php/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ividi.org privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301191149id_/http%3A//ividi.org/index.php/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title></title>
@@ -133,7 +133,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="footer">
-			Product names, trademarks, trade names or company names mentioned herein are used for identification only and may be the property of their respective owners<br>Copyrights © iVidi.org All rights reserved
+			Product names, trademarks, trade names or company names mentioned herein are used for identification only and may be the property of their respective owners<br>Copyrights © Techsnab LLC All rights reserved
 
 			<a href="http://ividi.org/index.php/">Home</a> |
 			<a href="http://ividi.org/index.php/about">About us</a> |
