--- a/o/on/onl/online-literature.com.html
+++ b/o/on/onl/online-literature.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the online-literature.com privacy policy that was archived on 2013-10-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131016215109id_/http%3A//www.online-literature.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the online-literature.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301201138id_/http%3A//www.online-literature.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html><head>
 <title>The Literature Network - Privacy Policy</title>
@@ -18,7 +18,7 @@ var casaleU=escape(window.location.href);
 var casaleHost=' type="text/javascript" src="http://as.casalemedia.com/s?s=';
 document.write('<scr'+'ipt'+casaleHost+'62613&amp;u=');
 document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
-//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=62613&amp;u=https%3A//web.archive.org/web/20131016215109id_/http%253A//www.online-literature.com/privacy.php&amp;f=1&amp;id=1783156284.4896154"></script>
+//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=62613&amp;u=https%3A//web.archive.org/web/20140301201138id_/http%253A//www.online-literature.com/privacy.php&amp;f=1&amp;id=1783155236.9908085"></script>
 <!-- DO NOT MODIFY -->
 
 
@@ -44,11 +44,12 @@ e9.addBlockingCategories="Audio,Pop-under,Pop-up";</script>
   
   <div class="stats">
 				  <p>
-				  Authors: 266<br>
-				  Books: 3,236<br>
-				  Poems &amp; Short Stories: 4,271<br>
-				  Forum Members: 70,634 <br>
-				  Forum Posts: 1,033,546<br>
+				  Authors: 267<br>
+				  Books: 3,607<br>
+				  Poems &amp; Short Stories: 4,435<br>
+				  Forum Members: 67,986 <br>
+				  Forum Posts: 1,216,101<br>
+				  Quizzes: 344<br>
 				  <i>And over 2 million unique readers monthly!</i>
 				  </p>
 				  </div>
@@ -71,6 +72,7 @@ e9.addBlockingCategories="Audio,Pop-under,Pop-up";</script>
 	        <li class="search"><a href="http://www.online-literature.com/advancedsearch.php" title="Search"><span class="search">Search</span></a></li>	        
 	        <li class="books"><a href="http://www.online-literature.com/periods/" title="Literature Periods, Movements, and History"><span class="books">Periods &amp; Movements</span></a></li>
 			<li class="books"><a href="http://www.online-literature.com/quizzes.php" title="Classic Literature Quizzes"><span class="books">Quizzes</span></a></li>
+			<li class="books"><a href="http://www.online-literature.com/summary-index.php" title="Classic Literature Summaries"><span class="books">Summaries</span></a></li>
 			<li class="books"><a href="http://www.online-literature.com/login.php" title="Subscribers">Subscriber Login</a></li>        	       
 	       </ul>	  
     </div>
@@ -163,7 +165,7 @@ We use third-party advertising companies to serve ads when you visit our Web sit
 			 <li class="last"><a href="http://www.online-literature.com/essays.php" title="Essay Disclaimer">Essay Information</a></li>
 			  <li class="last"><a href="http://www.online-literature.com/ssc.php" title="Short Story Competition">Short Story Contest</a></li>
 		    </ul>
-		 	<p><b>Languages: English, <a href="http://www.online-literature.com/espanol/" title="Espanol">Espanol</a></b> | Site Copyright © Jalic Inc. 2000 - 2013. All Rights Reserved.</p>
+		 	<p><b>Languages: English, <a href="http://www.online-literature.com/espanol/" title="Espanol">Espanol</a></b> | Site Copyright © Jalic Inc. 2000 - 2014. All Rights Reserved.</p>
 	<p><small><i><b>As Seen In:</b></i> USA Today "Hot Sites"</small></p>
      </div>
     <!-- end footer -->
