--- a/p/pu/pub/publishyourarticles.net.html
+++ b/p/pu/pub/publishyourarticles.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the publishyourarticles.net privacy policy that was archived on 2013-04-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130426133736id_/http%3A//www.publishyourarticles.net/our-privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publishyourarticles.net privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301204944id_/http%3A//www.publishyourarticles.net/our-privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:fb="http://ogp.me/ns/fb#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 
@@ -18,10 +18,9 @@ var isRTL = false;
   <meta name="description" content="This article aims to give information about the Privacy Policy of publishyourarticles.org">
   
   <title>Our Privacy Policy</title>
-  <link href="http://www.publishyourarticles.net/index.php?rsd=RealSimpleDiscovery" rel="EditURI" type="application/rsd+xml" title="RSD">
-  <link rel="stylesheet" href="/t3-assets/css5ddb8.css" type="text/css">
-  <link rel="stylesheet" href="/t3-assets/cssb4aa1.css" type="text/css">
-  <script type="text/javascript" src="/t3-assets/js2e2fa.js"></script>
+  <link rel="stylesheet" href="/t3-assets/css5d62f.css" type="text/css">
+  <link rel="stylesheet" href="/t3-assets/css10624.css" type="text/css">
+  <script type="text/javascript" src="/t3-assets/jsb5ded.js"></script>
 
 
 
@@ -153,7 +152,7 @@ var isRTL = false;
 	<p class="ja-day clearfix">
 	  	</p>
 	 
-	<p class="ja-updatetime"><span>Last update</span><em>02:30:52 PM</em></p>
+	<p class="ja-updatetime"><span>Last update</span><em>11:50:59 AM</em></p>
 	
 		
 	 -->		 
@@ -248,7 +247,7 @@ var isRTL = false;
 <p>PUBLISHYOURARTICLES will accumulate and process your personal information in  the India,&nbsp;USA or, from time to time, in other locations at its discretion in  order to provide you with competent and effective service.</p>
 <p>In order to assist in protecting the confidentiality of your personal  information,&nbsp;PUBLISHYOURARTICLES applies security safeguards appropriate to the  sensitivity of the information. However, in light of the nature of Internet  technologies, security and privacy risks cannot be eliminated and, therefore,  PUBLISHYOURARTICLES cannot guarantee that your personal information will not be  disclosed in ways not otherwise described in this Policy.</p>
 
-<div class="jvrel_box_bottom_left" style=" width: 100%; ">  <div class="jvrel_box_title">Related Articles</div>  <div class="jvrel_box_info"><ul><li><a title="Copyright infringement takedown notification policy – PublishYourArticles.net" href="/copyright-infringement-takedown-notification-policy-publishyourarticlesnet.html">Copyright infringement takedown notification policy – PublishYourArticles.net</a></li><li><a title="Copyright infringement takedown notification template – PublishYourArticles.net" href="/copyright-infringement-takedown-notification-template-publishyourarticlesnet.html">Copyright infringement takedown notification template – PublishYourArticles.net</a></li></ul>  </div></div></div>
+<div class="jvrel_box_bottom_left" style=" width: 100%; ">  <div class="jvrel_box_title">Related Articles</div>  <div class="jvrel_box_info"><ul><li><a title="Copyright Policy" href="/copyright-policy.html">Copyright Policy</a></li><li><a title="Copyright infringement takedown notification policy – PublishYourArticles.net" href="/copyright-infringement-takedown-notification-policy-publishyourarticlesnet.html">Copyright infringement takedown notification policy – PublishYourArticles.net</a></li><li><a title="About Us - PublishYourArticles.org" href="/about-us.html">About Us - PublishYourArticles.org</a></li><li><a title="Disclaimer - PublishYourArticles.org" href="/disclaimer.html">Disclaimer - PublishYourArticles.org</a></li><li><a title="__404__" href="/404.html">__404__</a></li></ul>  </div></div></div>
 
 
 
