--- a/s/sp/spl/sploder.com.html
+++ b/s/sp/spl/sploder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sploder.com privacy policy that was archived on 2013-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131109023029id_/http%3A//www.sploder.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sploder.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301213743id_/http%3A//www.sploder.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Privacy Policy - Make your own Games Online - Arcade, Platformer, Space &amp; Retro Games</title>
@@ -143,6 +143,12 @@ address for authentication and security purposes.</p>
     The forum software at <a href="http://forums.sploder.com">forums.sploder.com</a> will collect e-mail addresses in order for authentication, password resetting, approvals and forum-related system notices. 
 
     Members who join <a href="http://www.sploder.com">sploder.com</a> are <strong>not</strong> automatically registered on <a href="http://forums.sploder.com">forums.sploder.com</a>, and they must be 13 or older to register there.</p>
+
+
+
+<p class="note">Third party ad networks and analytics providers may collect certain types of information about your visit, including whether you interacted with content. No personally identifiable information will be collected.</p>
+
+
 
 
 
